--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "yup": "^0.32.11"
   }
